--- a/storytelling/index.html
+++ b/storytelling/index.html
@@ -153,6 +153,102 @@
 		.checkbox-label:hover, .radio-label:hover {
 			background-color: #12a1c4;
 		}
+
+		.container_form {
+            background-color: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            max-width: 700px;
+            width: 100%;
+            margin: 20px auto;
+            overflow: hidden;
+        }
+        h2 {
+            color: #6a1b9a;
+            text-align: center;
+            font-size: 1.5em;
+            margin-bottom: 30px;
+        }
+        .sub-title {
+            color: #6a1b9a;
+            text-align: center;
+            font-size: 1em;
+            background: #6a1b9a;
+            color: white;
+            padding: 5px 15px;
+            border-radius: 20px;
+            margin: -20px auto 30px auto;
+            display: inline-block;
+        }
+        .question {
+            margin-bottom: 30px;
+            position: relative;
+            padding: 10px;
+            border-radius: 10px;
+        }
+        .highlight {
+            background-color: #b3e5fc;
+        }
+        .question label {
+            display: block;
+            margin-bottom: 10px;
+            font-weight: bold;
+            font-size: 1.1em;
+        }
+        .slider-container {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+        .slider_form {
+            width: 100%;
+            margin: 0 10px;
+        }
+        .label_form {
+            display: flex;
+            align-items: center;
+        }
+        .label_form span {
+            margin-left: 5px;
+            font-weight: bold;
+            color: #6a1b9a;
+        }
+        .comments {
+            margin-bottom: 30px;
+        }
+        .comments textarea {
+            width: 100%;
+            height: 100px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            padding: 10px;
+            font-size: 1em;
+            resize: vertical;
+        }
+       
+        .submit-btn {
+            background-color: #6a1b9a;
+            color: white;
+            border: none;
+            padding: 15px 30px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1.2em;
+            transition: background-color 0.3s ease;
+            display: block;
+            width: 100%;
+            text-align: center;
+        }
+        .submit-btn:hover {
+            background-color: #4a148c;
+        }
+        .blue { background-color: #b3e5fc; }
+        .green { background-color: #c8e6c9; }
+        .yellow { background-color: #fff9c4; }
+        .orange { background-color: #ffe0b2; }
+        .purple { background-color: #d1c4e9; }
+        .pink { background-color: #f8bbd0; }
 		
 	</style>
 </head>
@@ -212,6 +308,15 @@
 		
 		<input type="radio" id="ai4" name="ai" value="4" onclick="showSlider()">
     	<label for="ai4">&#x1F5E3;: Ask questions and make Alpha-Mini generate story based on the answers of these questions  </label><br>
+
+		<input type="radio" id="ai5" name="ai" value="5" onclick="showSlider()">
+    	<label for="ai5">&#x1F5E3;: Provide lecture content, make Alpha-Mini generate story based on the provided lecture content </label><br>
+
+		<input type="radio" id="ai6" name="ai" value="6" onclick="showSlider()">
+    	<label for="ai6">&#x1F5E3;: Provide lecture and lecture subtopics and make Alpha-Mini generate story based on the based on provided lecture and lecture subtopics  </label><br>
+
+		<input type="radio" id="ai7" name="ai" value="7" onclick="showSlider()">
+    	<label for="ai7">&#x1F5E3;: Provide lecture topic and make Alpha-Mini generate story based on the lecture topic  </label><br>
 	
 	<br>
 		<!-- Story or prompt to be inputted-->
@@ -385,12 +490,91 @@ Question 3
 	<div id = "sessionDiv" style = "display: none"> 
 		<label> &#x1F916; : Here's your session summary! </label><br>
 		<br>
-		<textarea id="sessionSummary" readonly ></textarea>
+		<textarea id="sessionSummary" readonly ></textarea><br>
+		<br>
+		<!--Button to registered web client input-->
+		<button onclick="saveTextBoxes()">Save Session</button><br>
+		<br>
+		<label> &#x1F916; : Give us your feedback! </label><br>
+		<br>
+		<div class="container_form">
+			<h2>Story Evaluation Form</h2>
+			<div class="sub-title">Teacher Feedback Form</div>
+		
+			<div class="question blue">
+				<label for="accuracy">How accurately does this story align with the given topic?</label>
+				<div class="slider-container">
+					<div class="label_form"><span>1</span> <span>(Lowest)</span></div>
+					<input type="range" min="1" max="10" value="5" class="slider_form" id="accuracy">
+					<div class="label_form"><span>10</span> <span>(Highest)</span></div>
+				</div>
+				<div class="slider-value" id="accuracy-value">Current Value: 5</div>
+			</div>
+		
+			<div class="question green">
+				<label for="suitability">Is this story suitable for the specified age group?</label>
+				<div class="slider-container">
+					<div class="label_form"><span>1</span> <span>(Lowest)</span></div>
+					<input type="range" min="1" max="10" value="5" class="slider_form" id="suitability">
+					<div class="label_form"><span>10</span> <span>(Highest)</span></div>
+				</div>
+				<div class="slider-value" id="suitability-value">Current Value: 5</div>
+			</div>
+		
+			<div class="question yellow">
+				<label for="integration">How likely are you to integrate this story into your classroom discussions on the specified topic?</label>
+				<div class="slider-container">
+					<div class="label_form"><span>1</span> <span>(Lowest)</span></div>
+					<input type="range" min="1" max="10" value="5" class="slider_form" id="integration">
+					<div class="label_form"><span>10</span> <span>(Highest)</span></div>
+				</div>
+				<div class="slider-value" id="integration-value">Current Value: 5</div>
+			</div>
+		
+			<div class="question orange">
+				<label for="query-accuracy">How accurate the query is based on the story?</label>
+				<div class="slider-container">
+					<div class="label_form"><span>1</span> <span>(Lowest)</span></div>
+					<input type="range" min="1" max="10" value="5" class="slider_form" id="query-accuracy">
+					<div class="label_form"><span>10</span> <span>(Highest)</span></div>
+				</div>
+				<div class="slider-value" id="query-accuracy-value">Current Value: 5</div>
+			</div>
+		
+			<div class="question purple">
+				<label for="query-suitability">Is this query suitable for the specified age group?</label>
+				<div class="slider-container">
+					<div class="label_form"><span>1</span> <span>(Lowest)</span></div>
+					<input type="range" min="1" max="10" value="5" class="slider_form" id="query-suitability">
+					<div class="label_form"><span>10</span> <span>(Highest)</span></div>
+				</div>
+				<div class="slider-value" id="query-suitability-value">Current Value: 5</div>
+			</div>
+		
+			<div class="question pink">
+				<label for="query-objectives">Does this query align well with the learning objectives of the course?</label>
+				<div class="slider-container">
+					<div class="label_form"><span>1</span> <span>(Lowest)</span></div>
+					<input type="range" min="1" max="10" value="5" class="slider_form" id="query-objectives">
+					<div class="label_form"><span>10</span> <span>(Highest)</span></div>
+				</div>
+				<div class="slider-value" id="query-objectives-value">Current Value: 5</div>
+			</div>
+		
+				<div class="comments">
+					<label for="comments">Additional Comments (Optional)</label>
+					<textarea id="comments" name="comments"></textarea>
+				</div>
+		
+		   
+			<button class="submit-btn" type="submit" onclick="sendFeedback()">Submit </button>
+		</div>
+
+
 	</div>
 
 	<button onclick="stopServer()">Exit</button>
-	<!--Button to registered web client input-->
-	<button onclick="saveTextBoxes()">Save Session</button>	
+	
 	
 	
 	</div>
@@ -841,9 +1025,9 @@ Question 3
 
 
             var message = ai + "|" + story + "|"  + length + "|"+ level; 
-			// TODO: AI  level 0 message sending not working ?????????
             socket.send(message);	
             socket.close();
+			console.log("sending the message")
         });
     }
 	const sendQuestionToAskData = () => {
@@ -958,7 +1142,89 @@ Question 3
 	
 
 	}
- 
+
+	// update the current value of the accuracy according the current slider value
+	const accuracySlider = document.getElementById('accuracy');
+    const accuracyValue = document.getElementById('accuracy-value');
+    accuracySlider.oninput = function() {
+        accuracyValue.textContent = 'Current Value: ' + this.value;
+    };
+
+	// update the current value of the accuracy according the current slider value
+	const suitabilitySlider = document.getElementById('suitability');
+    const suitabilityValue = document.getElementById('suitability-value');
+    suitabilitySlider.oninput = function() {
+        suitabilityValue.textContent = 'Current Value: ' + this.value;
+    };
+
+	// update the current value of the accuracy according the current slider value
+	const integrationSlider = document.getElementById('integration');
+    const integrationValue = document.getElementById('integration-value');
+    integrationSlider.oninput = function() {
+        integrationValue.textContent = 'Current Value: ' + this.value;
+    };
+
+	// update the current value of the accuracy according the current slider value
+	const queryAccuracySlider = document.getElementById('query-accuracy');
+    const queryAccuracyValue = document.getElementById('query-accuracy-value');
+    queryAccuracySlider.oninput = function() {
+        queryAccuracyValue.textContent = 'Current Value: ' + this.value;
+    };
+
+	// update the current value of the accuracy according the current slider value
+	const querySuitabilitySlider = document.getElementById('query-suitability');
+    const querySuitabilityValue = document.getElementById('query-suitability-value');
+    querySuitabilitySlider.oninput = function() {
+        querySuitabilityValue.textContent = 'Current Value: ' + this.value;
+    };
+
+	// update the current value of the accuracy according the current slider value
+	const queryObjectivesSlider = document.getElementById('query-objectives');
+    const queryObjectivesValue = document.getElementById('query-objectives-value');
+    queryObjectivesSlider.oninput = function() {
+        queryObjectivesValue.textContent = 'Current Value: ' + this.value;
+    };
+
+	function sendFeedback(){
+		const q1Ans = accuracySlider.value;
+		const q2Ans = suitabilitySlider.value;
+		const q3Ans = integrationSlider.value;
+		const q4Ans =  queryAccuracySlider.value;
+		const q5Ans =  querySuitabilitySlider.value;
+		const q6Ans =  queryObjectivesSlider.value;
+		const q7Ans =  document.getElementById('comments').value;
+		
+		/*console.log(q1Ans)
+		console.log(q2Ans)
+		console.log(q3Ans)
+		console.log(q4Ans)
+		console.log(q5Ans)
+		console.log(q6Ans)
+		console.log(q7Ans) */
+
+		// dictionary creation key-value pairs
+
+		var dict = {
+			answer1: q1Ans,
+			answer2: q2Ans,
+			answer3: q3Ans,
+			answer4: q4Ans,
+			answer5: q5Ans,
+			answer6: q6Ans,
+			answer7: q7Ans
+
+		};
+
+		dict_String = JSON.stringify(dict);
+		console.log(dict);
+		const fileSystem = require("fs"); 
+		fileSystem.writeFile('file.json', JSON.stringify(dict), (error) => {
+			if (error) throw error
+		});
+		
+	}
+
 </script>
  
 </html>
+
