--- a/storytelling/begin.html
+++ b/storytelling/begin.html
@@ -155,7 +155,7 @@
 
 
         if (enteredCode === correctCode) {
-            window.location.href = 'index2.html'; // Redirect to the main page
+            window.location.href = 'secondary.html'; // Redirect to the main page
         } else {
             errorMessage.textContent = "Wrong access code. Please try again.";
         }
